--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 w# .env (בשורש הפרויקט, ליד package.json)
 EXPO_PUBLIC_API_BASE_URL=https://mamatrack-back.onrender.com
 
+; EXPO_PUBLIC_API_BASE_URL=http://localhost:3030
+
+
 
