בלי טעינה לרגע_הפרופיל לא עורך וסת)

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 w# .env (בשורש הפרויקט, ליד package.json)
-https://mamatrack-back.onrender.com
-
+EXPO_PUBLIC_API_BASE_URL=https://mamatrack-back.onrender.com
 
 
 
